@@ -642,9 +642,9 @@ AT_DATA([prog.cob], [
        01 X             PIC X(05).
        01 Y             PIC 9(04) BINARY VALUE 7.
        PROCEDURE        DIVISION.
-           DISPLAY X WITH SIZE    5 END-DISPLAY.
-           DISPLAY X WITH SIZE IS 6 END-DISPLAY.
-           DISPLAY X WITH SIZE IS Y END-DISPLAY.
+           DISPLAY X AT 0101 WITH SIZE    5 END-DISPLAY.
+           DISPLAY X AT 0101 WITH SIZE IS 6 END-DISPLAY.
+           DISPLAY X AT 0101 WITH SIZE IS Y END-DISPLAY.
            STOP RUN.
 ])
 
