@@ -1,4 +1,12 @@
 
+2016-02-13  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y: permit DISPLAY and ACCEPT clauses in any order.
+	* parser.y: add optional WITH before every disp/accp_attr and optional
+	  AT before each LINE/COL clause.
+	* parser.y: allow the screen and device formats of the DISPLAY statement
+	  to be mixed in one statement.
+
 2016-02-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* scanner.l (read_literal): Fix multiple heap corruptions
@@ -12,7 +20,7 @@
 
 	* general: fixing all warnings generated by msc code analysis
 	  (possible memory related issues)
-	* cobc.c (process_filename): don't check object files for valid COBOL 
+	* cobc.c (process_filename): don't check object files for valid COBOL
 	  file names
 	* cobc.c (process_library) [_MSC_VER]: check all input filenames
 	  preventing deletion of passed lib file
